--- a/src/components/Game/Game.css
+++ b/src/components/Game/Game.css
@@ -1,1 +1,1 @@
-.Game{width:max-content;margin:5vw auto;text-align:center}button.hand-select{margin-top:1vw;margin-bottom:1vw;border:1px solid #999;float:left;font-weight:bold;line-height:34px;padding:2vw;text-align:center}
+.Game{width:max-content;margin:5vw auto;text-align:center}a.hand-select{margin-top:1vw;margin-bottom:1vw;float:left;font-weight:bold;line-height:34px;padding:2vw;text-align:center}a.hand-select :hover{color:#5e5e5e}a.hand-select :active{color:lightblue}.player-result,.cpu-result{padding:2vw 0 2vw 0}
